@@ -4,6 +4,7 @@ https://github.com/resident-uhlig/chrome-hyperiums7/issues
 XXXX-XX-XX XX:XX:XX Version 0.1.0
 * Added information about deployed fleets
 * Added coordinates to moving fleets
+* Added separate link for going to last page of thread
 
 2013-11-29 15:44:00 Version 0.0.6
 * Added Cache Overview
